# cnn-mellin

./: .gitignore  .gitmodules  README.md  RESULTS  asr.py  common.py  environment.yaml  mconv.py  models.py  optim.py  path.sh  pyproject.toml  pytest.ini  requirements.txt  running.py  setup.cfg  setup.py  timit.sh  tox.ini
.devcontainer/: devcontainer.json  setup.sh
c/: CMakeLists.txt
c/cpu/config/cdrobert/mellin/: config_cpu.h.in
c/cuda/: CMakeLists.txt
c/cuda/config/cdrobert/mellin/: config_cuda.h.in
c/cuda/include/cdrobert/mellin/: mconv_cuda.cuh
c/performance/: CMakeLists.txt  blas_cuda.cuh  mconv_profiling.cpp
c/tests/: test_batching.cc  test_col2snd.cc  test_mconv1d.cc  test_mconv1d_cuda.cc  test_mconvlconv_cuda.cc  test_mcorrlcorr.cc  test_mcorrlcorr_buffers.h  test_snd2col_buffers.h  test_spec2col.cc  test_utils_cpu.h
cnn_mellin/: __init__.py  command_line.py  data.py  experimentation.py  models.py  optim.py  params.py  running.py
conf/: conv.ini  gbank_half.json  mconv.ini  mfcc.conf  model_lcorr_optim.ini  model_mcorr_optim.ini  sifbank_41.json
conf/azureml/: create-cluster-gpu.yaml  create-environment.yaml  run-pytest.yaml
conf/feats/: fbank-81-10ms.json  sigbank-41-2ms.json
conf/model/: lcorr-fbank-81-10ms.ini  lcorr-sigbank-41-2ms.ini  mcorr-fbank-81-10ms.ini  mcorr-sigbank-41-2ms.ini
conf/optim/: model-lcorr-fbank-81-10ms.ini  model-lcorr-raw.ini  model-lcorr-sigbank-41-2ms.ini  model-lcorr-sm.ini  model-lcorr.ini  model-mcorr-sm.ini  model-mcorr.ini
conf/partial/: 20eps_no_es.cfg  conv_0.cfg  conv_1.cfg  conv_arch_optimize.cfg  conv_layers_optimize.cfg  conv_optimize.cfg  conv_training_optimize.cfg  mconv_arch_optimize.cfg  mconv_layers_optimize.cfg  mconv_optimize.cfg  mconv_ptdtc_1.cfg  mconv_ptdtf_1.cfg
conf/python/: environment-core.yaml  environment-dev.yaml
ext/: torch_cuda.cu
ext/include/cdrobert/mellin/: config.h  config_cpu.h  mconv.h
localext/: construct_kaldi_data.sh  construct_torch_data.sh  plot_confusability.py  score.sh  slurm_decode_helper.sh  slurm_optimize_helper.sh  slurm_optimize_helper_cpu.sh  slurm_train_helper.sh  split_torch_data_dir.sh  stats.py  stretch_ali.py
scripts/: cnn_mellin.slrm  hyperparam.sh  preamble.slrm  timit_prep.slrm  utils.sh
scripts/azure/: create-cluster-cpu.yaml
scripts/azureml/: create-cluster-cpu.yaml  create-cluster-gpu.yaml  create-environment-core.yaml  create-environment-dev.yaml  print-db-url.yaml  run-pytest.yaml  timit-stage-3.yaml  timit-stage-n-array-template.yaml  timit-stage-n-component.yaml  timit-stage-n-pipeline-header.yaml  timit-stage-n.yaml  timit-stages-1-and-2.yaml  timit.sh  timit_wrapper.sh
scripts/dedicated_parallel/: timit.sh
scripts/slurm/: timit.sh  timit_stage_01.sh  timit_stage_02.sh  timit_stage_03.sh  timit_stage_04.sh  timit_stage_05.sh  timit_stage_06.sh  timit_stage_07.sh  timit_stage_08.sh  timit_stage_09.sh  timit_stage_10.sh  timit_stage_11.sh  timit_stage_12.sh  timit_stage_13.sh  timit_stage_14.sh  timit_wrapper.sh
src/c/config/: Cdrobert_MellinConfig.cmake.in
src/c/config/cdrobert/mellin/: config.h.in
src/c/cpu/: CMakeLists.txt
src/c/performance/: blas_cpu.h  mconv_cuda_profiling.cu
src/c/tests/: CMakeLists.txt  test_batching_cuda.cc  test_col2lin_buffers.h  test_col2snd_buffers.h  test_col2snd_cuda.cc  test_col2spec.cc  test_col2spec_buffers.h  test_col2spec_cuda.cc  test_lconv1d_buffers.h  test_lcorr1d_buffers.h  test_lin2col_buffers.h  test_mconv1d_buffers.h  test_mconvlconv.cc  test_mconvlconv_buffers.h  test_mcorr1d.cc  test_mcorr1d_buffers.h  test_mcorr1d_cuda.cc  test_mcorrlcorr_cuda.cc  test_snd2col.cc  test_snd2col_cuda.cc  test_spec2col_buffers.h  test_spec2col_cuda.cc  test_utils.h  test_utils_cuda.h
src/cnn_mellin/: __init__.py  command_line.py  layers.py  mconv.py  models.py  optim.py  running.py  version.py
src/cnn_mellin/c/: torch.cpp  torch_cpu.cpp
src/cnn_mellin/c/include/cdrobert/mellin/: config_cuda.h
stepsext/: decode_acoustic_model.sh  generate_matrix.sh  optimize_acoustic_model.sh  train_acoustic_model.sh  write_optimized_config.sh
tests/: buffers.json  conftest.py  test_command_line.py  test_commands.py  test_data.py  test_experimentation.py  test_layers.py  test_mconv.py  test_models.py  test_optim.py  test_running.py
