[metadata]
name = cnn-mellin
description = "Experiments with mellin convolution"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/sdrobert/cnn-mellin
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
  = src
python_requires = >= 3.6
install_requires =
  torch==1.9.0
  pydrobert-pytorch
  pydrobert-param==0.3.0
  pydrobert-mellin
  scikit-learn

[options.extras_require]
optim = optuna==2.8.0

[options.entry_points]
console_scripts =
  cnn-mellin = cnn_mellin.command_line:cnn_mellin

[options.packages.find]
where = src
